[package]
name = "r_kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli_tool"
path = "src/bin/cli_tool.rs"

[[bin]]
name = "tcp_server"
path = "src/bin/tcp_server.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
